# a32nx-fbw

./: .gitignore  Cargo.toml  FBW.sln  FBW.vcxproj  FBW.vcxproj.filters  README.md  common.h  controls.h  data.h  data_recorder.h  fbw_sys.cpp  input.h  neural_net.h  pitch.h  pitch_control_mode.h  protections.h  roll.h
A32NX/SimObjects/AirPlanes/Asobo_A320_NEO/: flight_model.cfg
src/: controls.rs  data.rs  fbw.rs  input.rs  lib.rs  pid.rs  pitch_control.rs  protections.rs  sim_time.rs
