[package]
name = "a32nx-fbw"
version = "0.1.0"
authors = ["Gus Caplan <me@gus.host>"]
edition = "2018"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msfs = { git = "https://github.com/devsnek/msfs-rs", branch = "main" }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }